feat: replace client path option with identifier
